3rdparty changes:

Update Mar 6 2025
---------------------------------
* Updated onetbb to version 2022.0.0
* Updated opensubdiv to version 3.6.0

Update Feb 9 2025
---------------------------------
* Updated libpng15 to libpng16

Update Feb 6 2025
---------------------------------
* Improved documentation
* Fixed --target issue

Update Jan 29 2025
---------------------------------
* Updated Qt to 6.8.1

Update Mar 10 2024
---------------------------------
* Updated boost to 1.8.4

Update Mar 5 2024
---------------------------------
* Updated Qt to support ICC profiles in Qt core graphics

Update Feb 9 2024
---------------------------------
* Updated oiio to 3.0.3.1
* Updated USD to 25.0.2
* Updated Qt to 6.8.1
* Improved build configuration

Update March 11 2024
---------------------------------
* Updated USD to 24.03
* Updated boost to 1.84.0
* Removed pkg-config

Update March 4 2024
---------------------------------
* Added ICC profile support in Qt core graphics

Update February 17 2024
---------------------------------
* Updated nangui
* Updated MaterialX

Update January 8 2024
---------------------------------
* Added OpenCV

Update December 18 2023
---------------------------------
* Fixed clang issue with pyside

Update December 17 2023
---------------------------------
* Fixed CMake 3.28 issue in Qt 6.6.0
* Fixed pyside ninja build

Update December 17 2023
---------------------------------
* build.sh improvements
* Added ninja for Qt build
* Added ld classic for Xcode 15+
* Updated json
* Fixed nasm incorrect lib output

Update December 12 2023
---------------------------------
* build.sh improvements
* Moved freetype to build_base
* Updated OpenColorIO
* Updated MaterialX python path
* Updated OpenImageIO python path
* Fixed USD

Update December 10 2023
---------------------------------
* Changed build_install_script build_install_check
* Updated Pyside2 to Pyside6
* Removed Pytools2
* Updated Python for OIIO, OCIO, USD and MaterialX
