@@ -6,7 +6,7 @@
 # Copyright 2008 Larry Gritz and the other authors and contributors.
 # All Rights Reserved.
 
-# oiio from github.com master 2025-02-08
+# oiio from github.com master 2025-06-16
 # https://github.com/AcademySoftwareFoundation/OpenImageIO/releases
 
 build_info( " Adding oiio project" )
@@ -17,13 +17,13 @@ build_info( " Adding oiio project" )
 set( project_name "oiio" )
 
 # project pkg
-set( project_pkg "OpenImageIO-3.0.3.1" )
+set( project_pkg "OpenImageIO-main" )
 
 # project archive
-set( project_arc ${project_pkg}.tar.gz )
+set( project_arc ${project_pkg}-250617.tar.gz )
 
 # project url
-set( project_url ${repo_url}/${project_pkg}.tar.gz )
+set( project_url ${repo_url}/${project_arc} )
 
 # project config
 set( project_cfg_verbose TRUE )
@@ -81,7 +81,7 @@ if( UNIX )
         set( lib_dtag "_d" )
     endif()
 
-    set( lib_version "3.0.3" )
+    set( lib_version "3.1.3" )
 
     foreach( lib_file ${lib_files} )
         list( APPEND lib_output 
